--- a/SentenceClassification.ipynb
+++ b/SentenceClassification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "4  ABBREVIATION      ABBR       exp  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,11 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = 'bert-base-cased'\n",
+    "MODEL_NAME = 'bert-base-uncased'\n",
     "\n",
     "# train_loader = create_dataloader(X_train, y_train, pretrained_model_name=MODEL_NAME)\n",
     "# test_loader = create_dataloader(X_test, y_test, pretrained_model_name=MODEL_NAME)"
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,10 +478,11 @@
     "        if do_eval:\n",
     "            evaluate(model, test_loader)\n",
     "            \n",
-    "    criteria = torch.nn.CrossEntropyLoss().cuda()\n",
-    "    optimizer = torch.optim.Adam([{\"params\": net.parameters(), \"lr\": 0.0001}])\n",
+    "    \n",
+    "    optimizer = torch.optim.Adam([{\"params\": net.parameters(), \"lr\": 0.00001}])\n",
     "    for epoch in range(num_epochs):\n",
     "        print('Epoch:', epoch)\n",
+    "        criteria = torch.nn.CrossEntropyLoss().cuda()\n",
     "        do_eval = False\n",
     "        if epoch % 5 == 0 or epoch == num_epochs - 1:\n",
     "            do_eval = True\n",
@@ -490,18 +491,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -513,28 +507,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1091it [03:07,  5.81it/s]\n",
-      "4it [00:00, 31.25it/s]"
+      "1091it [03:10,  5.72it/s]\n",
+      "3it [00:00, 20.41it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average RE loss :  0.6249436834992672\n",
+      "average RE loss :  0.5369372202867111\n",
       "train_cls report: \n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.68      0.27      0.39        62\n",
-      "           1       0.76      0.75      0.75       935\n",
-      "           2       0.67      0.75      0.71       998\n",
-      "           3       0.88      0.86      0.87       988\n",
-      "           4       0.87      0.84      0.85       660\n",
-      "           5       0.88      0.85      0.86       718\n",
+      "           0       0.86      0.29      0.43        62\n",
+      "           1       0.75      0.83      0.79       935\n",
+      "           2       0.75      0.75      0.75       998\n",
+      "           3       0.85      0.88      0.87       988\n",
+      "           4       0.87      0.83      0.85       660\n",
+      "           5       0.95      0.86      0.90       718\n",
       "\n",
-      "    accuracy                           0.80      4361\n",
-      "   macro avg       0.79      0.72      0.74      4361\n",
-      "weighted avg       0.80      0.80      0.80      4361\n",
+      "    accuracy                           0.82      4361\n",
+      "   macro avg       0.84      0.74      0.77      4361\n",
+      "weighted avg       0.83      0.82      0.82      4361\n",
       "\n"
      ]
     },
@@ -542,8 +536,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "273it [00:09, 28.38it/s]\n",
-      "1it [00:00,  6.06it/s]"
+      "273it [00:09, 27.39it/s]\n",
+      "1it [00:00,  6.85it/s]"
      ]
     },
     {
@@ -552,16 +546,16 @@
      "text": [
       "Testing report:                precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.55      0.75      0.63        24\n",
-      "           1       0.81      0.87      0.84       227\n",
-      "           2       0.87      0.83      0.85       252\n",
-      "           3       0.96      0.93      0.94       235\n",
-      "           4       0.92      0.96      0.94       175\n",
-      "           5       0.98      0.90      0.94       178\n",
+      "           0       0.94      0.62      0.75        24\n",
+      "           1       0.93      0.90      0.91       227\n",
+      "           2       0.92      0.92      0.92       252\n",
+      "           3       0.97      0.98      0.97       235\n",
+      "           4       0.96      0.98      0.97       175\n",
+      "           5       0.94      0.99      0.96       178\n",
       "\n",
-      "    accuracy                           0.89      1091\n",
-      "   macro avg       0.85      0.87      0.86      1091\n",
-      "weighted avg       0.90      0.89      0.89      1091\n",
+      "    accuracy                           0.94      1091\n",
+      "   macro avg       0.94      0.90      0.92      1091\n",
+      "weighted avg       0.94      0.94      0.94      1091\n",
       "\n",
       "Epoch: 1\n"
      ]
@@ -570,7 +564,329 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "896it [02:33,  6.25it/s]"
+      "1091it [03:00,  6.03it/s]\n",
+      "1it [00:00,  6.80it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average RE loss :  0.14250335110971188\n",
+      "train_cls report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.69      0.79        62\n",
+      "           1       0.94      0.94      0.94       935\n",
+      "           2       0.93      0.94      0.93       998\n",
+      "           3       0.98      0.97      0.98       988\n",
+      "           4       0.97      0.97      0.97       660\n",
+      "           5       0.99      0.99      0.99       718\n",
+      "\n",
+      "    accuracy                           0.96      4361\n",
+      "   macro avg       0.95      0.92      0.93      4361\n",
+      "weighted avg       0.96      0.96      0.96      4361\n",
+      "\n",
+      "Epoch: 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1091it [03:01,  6.01it/s]\n",
+      "1it [00:00,  7.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average RE loss :  0.06873738170216435\n",
+      "train_cls report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      0.76      0.84        62\n",
+      "           1       0.97      0.98      0.97       935\n",
+      "           2       0.98      0.98      0.98       998\n",
+      "           3       0.99      0.99      0.99       988\n",
+      "           4       0.98      0.99      0.99       660\n",
+      "           5       0.99      1.00      1.00       718\n",
+      "\n",
+      "    accuracy                           0.98      4361\n",
+      "   macro avg       0.98      0.95      0.96      4361\n",
+      "weighted avg       0.98      0.98      0.98      4361\n",
+      "\n",
+      "Epoch: 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1091it [02:54,  6.24it/s]\n",
+      "1it [00:00,  6.71it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average RE loss :  0.03679885823829364\n",
+      "train_cls report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.90      0.93        62\n",
+      "           1       0.98      0.98      0.98       935\n",
+      "           2       0.99      0.98      0.98       998\n",
+      "           3       0.99      1.00      0.99       988\n",
+      "           4       0.99      0.99      0.99       660\n",
+      "           5       1.00      1.00      1.00       718\n",
+      "\n",
+      "    accuracy                           0.99      4361\n",
+      "   macro avg       0.98      0.98      0.98      4361\n",
+      "weighted avg       0.99      0.99      0.99      4361\n",
+      "\n",
+      "Epoch: 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1091it [02:54,  6.24it/s]\n",
+      "1it [00:00,  6.41it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average RE loss :  0.03510374377125671\n",
+      "train_cls report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      0.97      0.95        62\n",
+      "           1       0.99      0.98      0.98       935\n",
+      "           2       0.98      0.98      0.98       998\n",
+      "           3       0.99      0.99      0.99       988\n",
+      "           4       1.00      1.00      1.00       660\n",
+      "           5       1.00      1.00      1.00       718\n",
+      "\n",
+      "    accuracy                           0.99      4361\n",
+      "   macro avg       0.98      0.99      0.98      4361\n",
+      "weighted avg       0.99      0.99      0.99      4361\n",
+      "\n",
+      "Epoch: 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1091it [02:55,  6.23it/s]\n",
+      "4it [00:00, 32.52it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average RE loss :  0.019796824859545713\n",
+      "train_cls report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.94      0.95        62\n",
+      "           1       0.99      0.99      0.99       935\n",
+      "           2       0.99      0.99      0.99       998\n",
+      "           3       1.00      1.00      1.00       988\n",
+      "           4       1.00      1.00      1.00       660\n",
+      "           5       1.00      1.00      1.00       718\n",
+      "\n",
+      "    accuracy                           0.99      4361\n",
+      "   macro avg       0.99      0.99      0.99      4361\n",
+      "weighted avg       0.99      0.99      0.99      4361\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "273it [00:08, 32.27it/s]\n",
+      "1it [00:00,  6.71it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing report:                precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.79      0.86        24\n",
+      "           1       0.90      0.96      0.93       227\n",
+      "           2       0.95      0.91      0.93       252\n",
+      "           3       0.99      0.97      0.98       235\n",
+      "           4       0.97      0.97      0.97       175\n",
+      "           5       0.97      0.99      0.98       178\n",
+      "\n",
+      "    accuracy                           0.95      1091\n",
+      "   macro avg       0.95      0.93      0.94      1091\n",
+      "weighted avg       0.95      0.95      0.95      1091\n",
+      "\n",
+      "Epoch: 6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1091it [02:55,  6.23it/s]\n",
+      "1it [00:00,  7.46it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average RE loss :  0.01965855699848626\n",
+      "train_cls report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.94      0.96        62\n",
+      "           1       0.99      0.99      0.99       935\n",
+      "           2       0.99      0.99      0.99       998\n",
+      "           3       1.00      1.00      1.00       988\n",
+      "           4       1.00      1.00      1.00       660\n",
+      "           5       1.00      1.00      1.00       718\n",
+      "\n",
+      "    accuracy                           1.00      4361\n",
+      "   macro avg       0.99      0.99      0.99      4361\n",
+      "weighted avg       1.00      1.00      1.00      4361\n",
+      "\n",
+      "Epoch: 7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1091it [02:55,  6.21it/s]\n",
+      "1it [00:00,  6.99it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average RE loss :  0.017493547101724488\n",
+      "train_cls report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.97      0.97        62\n",
+      "           1       1.00      0.99      1.00       935\n",
+      "           2       0.99      0.99      0.99       998\n",
+      "           3       1.00      1.00      1.00       988\n",
+      "           4       0.99      1.00      0.99       660\n",
+      "           5       1.00      1.00      1.00       718\n",
+      "\n",
+      "    accuracy                           0.99      4361\n",
+      "   macro avg       0.99      0.99      0.99      4361\n",
+      "weighted avg       0.99      0.99      0.99      4361\n",
+      "\n",
+      "Epoch: 8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1091it [02:57,  6.16it/s]\n",
+      "1it [00:00,  6.62it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average RE loss :  0.028229642225775994\n",
+      "train_cls report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      1.00      0.99        62\n",
+      "           1       0.99      0.99      0.99       935\n",
+      "           2       0.99      0.99      0.99       998\n",
+      "           3       1.00      1.00      1.00       988\n",
+      "           4       1.00      1.00      1.00       660\n",
+      "           5       0.99      0.98      0.99       718\n",
+      "\n",
+      "    accuracy                           0.99      4361\n",
+      "   macro avg       0.99      0.99      0.99      4361\n",
+      "weighted avg       0.99      0.99      0.99      4361\n",
+      "\n",
+      "Epoch: 9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1091it [02:56,  6.19it/s]\n",
+      "4it [00:00, 32.25it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average RE loss :  0.01572126554415709\n",
+      "train_cls report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.98      0.98        62\n",
+      "           1       0.99      0.99      0.99       935\n",
+      "           2       0.99      0.99      0.99       998\n",
+      "           3       1.00      1.00      1.00       988\n",
+      "           4       0.99      1.00      1.00       660\n",
+      "           5       1.00      1.00      1.00       718\n",
+      "\n",
+      "    accuracy                           1.00      4361\n",
+      "   macro avg       0.99      0.99      0.99      4361\n",
+      "weighted avg       1.00      1.00      1.00      4361\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "273it [00:08, 32.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing report:                precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.79      0.83        24\n",
+      "           1       0.92      0.93      0.93       227\n",
+      "           2       0.97      0.90      0.93       252\n",
+      "           3       0.97      0.98      0.97       235\n",
+      "           4       0.97      0.97      0.97       175\n",
+      "           5       0.95      1.00      0.98       178\n",
+      "\n",
+      "    accuracy                           0.95      1091\n",
+      "   macro avg       0.94      0.93      0.93      1091\n",
+      "weighted avg       0.95      0.95      0.95      1091\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
