--- a/NER.ipynb
+++ b/NER.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
     "from sklearn.metrics import classification_report\n",
     "import os\n",
     "import logging\n",
-    "logger = logging.getLogger(__name__)\n"
+    "logger = logging.getLogger(__name__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,12 +335,14 @@
     "    label_list = processor.get_labels()\n",
     "    num_labels = len(label_list) + 1\n",
     "\n",
-    "    net = Ner.from_pretrained('bert-base-uncased')\n",
+    "    config = BertConfig.from_pretrained('bert-base-uncased', num_labels=num_labels, finetuning_task='NER')\n",
+    "\n",
+    "    net = Ner.from_pretrained('bert-base-uncased', config=config)\n",
     "    tokenizer = BertTokenizer.from_pretrained('bert-base-uncased', do_lower_case=True)\n",
-    "    if cuda:\n",
-    "        net.cuda()\n",
+    "    # if cuda:\n",
+    "    #     net.cuda()\n",
     "        \n",
-    "    train_examples = processor.get_train_examples('data/CONLL2003/')\n",
+    "    train_examples = processor.get_train_examples('')\n",
     "    train_features = convert_examples_to_features(\n",
     "        train_examples, label_list, 128, tokenizer)\n",
     "    all_input_ids = torch.tensor([f.input_ids for f in train_features], dtype=torch.long)\n",
@@ -353,7 +355,7 @@
     "    train_sampler = RandomSampler(train_data)\n",
     "    train_dataloader = DataLoader(train_data, sampler=train_sampler, batch_size=8)\n",
     "    \n",
-    "    eval_examples = processor.get_test_examples('data/CONLL2003/')\n",
+    "    eval_examples = processor.get_test_examples('')\n",
     "    eval_features = convert_examples_to_features(eval_examples, label_list, 128, tokenizer)\n",
     "    all_input_ids = torch.tensor([f.input_ids for f in eval_features], dtype=torch.long)\n",
     "    all_input_mask = torch.tensor([f.input_mask for f in eval_features], dtype=torch.long)\n",
@@ -372,13 +374,13 @@
     "        all_preds = []\n",
     "        for i, batch in tqdm(enumerate(train_dataloader)):\n",
     "            input_ids, input_mask, segment_ids, label_ids, valid_ids, l_mask = batch\n",
-    "            if cuda:\n",
-    "                input_ids = input_ids.cuda()\n",
-    "                input_mask = input_mask.cuda()\n",
-    "                segment_ids = segment_ids.cuda()\n",
-    "                label_ids = label_ids.cuda()\n",
-    "                valid_ids = valid_ids.cuda()\n",
-    "                l_mask = l_mask.cuda()\n",
+    "            # if cuda:\n",
+    "            #     input_ids = input_ids.cuda()\n",
+    "            #     input_mask = input_mask.cuda()\n",
+    "            #     segment_ids = segment_ids.cuda()\n",
+    "            #     label_ids = label_ids.cuda()\n",
+    "            #     valid_ids = valid_ids.cuda()\n",
+    "            #     l_mask = l_mask.cuda()\n",
     "\n",
     "            loss = model(input_ids, segment_ids, input_mask, label_ids,valid_ids,l_mask)\n",
     "            \n",
@@ -435,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
